se agrego la imagen

--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,7 @@
-# Curso de git
+<html>
+    <head>
+    </head>
+    <body>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcincodias.elpais.com%2Fcincodias%2F2018%2F11%2F13%2Flifestyle%2F1542113135_776401.html&psig=AOvVaw3UjKoT__VUi2q9WdriYNxN&ust=1621467786857000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKDT8bW01PACFQAAAAAdAAAAABAD" alt="">
+    </body>
+</html>
